k8s/vue-fe-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vue-fe-service
spec:
  type: ClusterIP
  selector:
    app: vue
  ports:
    - port: 80 # Service가 노출하는 포트
      targetPort: 80 # 컨테이너에서 사용하는 포트 (Nginx)
